--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -16,7 +16,7 @@
     font-style: italic;
    
     font-weight: bold;
-    width: 400px;
+    width: 350px;
     text-align: justify;
 }
 #about .container .row .col{
@@ -80,6 +80,15 @@ body.active #about .container .row .col .course .complete h4 {
     #about .container .row .col  p {
         margin-top: 15px;
         font-family: 'Kalam', sans-serif;
+    }
+    #about .container .row .cols img{
+        width: 290px;
+    }
+    .container .row .col div p{
+        /* background-color: red; */
+        margin: 0px 10px;
+        text-align: justify;
+        padding: 10px;
     }
 
 }
