--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -132,23 +132,24 @@
   }
   #home .container .row .col div p {
     line-height: 25px;
-    font-family: cursive;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     font-size: 20px;
-    /* font-style: italic; */
+   font-weight: 900;
     color: black;
     font-weight: bold;
 
-    max-width: 550px;
-    padding: 15px;
-    text-align: justify;
+    /* max-width: 550px; */
+  
+   
+    
   }
   #home .container .col img {
     border-radius: 100px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
       rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     cursor: pointer;
-    width: 350px;
+    width: 300px;
     border-radius: 50%;
   }
 }
