--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -112,7 +112,7 @@
     margin-top: 10px;
   }
   #home .container .col div h2 {
-    font-family: serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: oblique;
     color: black;
     display: block;
