--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -50,7 +50,7 @@
     width: 300px;
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
+    align-items: center;
 
 
 }
