--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -67,7 +67,7 @@
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   cursor: pointer;
-  width: 450px;
+  width: 380px;
 }
 #home .container .row .img {
   display: flex;
@@ -150,6 +150,6 @@
       rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     cursor: pointer;
     width: 300px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
   }
 }
